...

    private init() {
        let qwenManager = QwenModelManager(cacheDirectory: Self.qwenModelDirectory)
        let qwenEnabled = UserDefaults.standard.object(forKey: "onevoice.useQwenFinalPass") as? Bool ?? true
        let liveEngine: any TranscriptionEngine
        #if DEBUG
        if ProcessInfo.processInfo.environment["ONEVOICE_UI_TEST_FAKE_SPEECH"] == "1" {
            liveEngine = UITestTranscriptionEngine()
        } else {
            liveEngine = AppleSpeechTranscriptionEngine()
        }
        #else
        liveEngine = AppleSpeechTranscriptionEngine()
...
